--- a/src/components/Homes/Home.css
+++ b/src/components/Homes/Home.css
@@ -3,7 +3,7 @@
 	padding: 20px 0px;
 	background-color: #fff;
   /* height: 150px; */
-  padding: 1rem 5rem;
+  padding: 1rem;
 	z-index: 98;
 	position: fixed;
   width: 100%;
