--- a/src/components/Homes/Home.css
+++ b/src/components/Homes/Home.css
@@ -33,6 +33,7 @@
 	transition: 0.3s ease-in-out;
 	gap: 20px;
 	padding-top: 140px;
+	padding-bottom: 70px;
 }
 
 .image-card {
@@ -44,4 +45,5 @@
 
 .image {
 	width: 100%;
+	height: 100%;
 }
