--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -32,7 +32,7 @@
 	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 	transition: 0.3s ease-in-out;
 	gap: 20px;
-	/* padding-top: 0px; */
+	padding-bottom: 70px;
 }
 
 .image-card {
