--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,4 +1,4 @@
-.tags {
+.tagsGallery {
 	text-align: center;
 	padding: 20px 0px;
 	background-color: #fff;
@@ -17,6 +17,7 @@
 	background-color: transparent;
 	cursor: pointer;
 	margin-top: 90px;
+	font-size: clamp(0.5rem,2.5vw, 0.8rem);
 }
 
 .active {
@@ -24,7 +25,7 @@
 	border-bottom: 1px solid #3f8fcd;
 	color: #3f8fcd;
 }
-.container{
+.containerGallery{
 	width: 94%;
 	margin: auto;
 	display: grid;
@@ -46,4 +47,10 @@
 .image {
 	width: 100%;
 	height: 100%;
+}
+
+@media screen and (max-width: 768px) {
+	.containerGallery {
+		display: block;
+	}
 }
