new font and colors

--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -1,7 +1,7 @@
 .tagsGallery {
 	text-align: center;
 	padding: 20px 0px;
-	background-color: #F5F5F5;
+	background-color: #fff;
   /* height: 150px; */
   padding: 1rem;
 	z-index: 98;
