--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -31,7 +31,7 @@
 	/* grid-template-columns: repeat(4, 1fr); */
 	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 	transition: 0.3s ease-in-out;
-	gap: 20px;
+	gap: 80px 20px;
 	padding-bottom: 70px;
 }
 
@@ -46,10 +46,16 @@
 	width: 100%;
 }
 
-#Shop {
+.Shop {
 	margin: 0.5rem;
 	text-align: center;
-	font-size: clamp(0.75rem, 2vw, 1rem);
+	font-size: clamp(1rem, 2vw, 1rem);
+}
+.ShopP {
+	margin: 0.5rem;
+	text-align: center;
+	font-size: clamp(0.9rem, 2vw, 0.9rem);
+	color: #6B7EA2;
 }
 
 @media screen and (max-width: 768px) {
