--- a/src/components/Book/Book.css
+++ b/src/components/Book/Book.css
@@ -24,14 +24,14 @@
 	border-bottom: 1px solid #3f8fcd;
 	color: #3f8fcd;
 } */
-.containerShop {
+.containerBook {
 	width: 94%;
 	margin: auto;
 	display: grid;
 	/* grid-template-columns: repeat(4, 1fr); */
 	grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 	transition: 0.3s ease-in-out;
-	gap: 80px 20px;
+	gap: 0px 20px;
 	padding-bottom: 70px;
 }
 
@@ -61,7 +61,8 @@
 }
 
 @media screen and (max-width: 768px) {
-	.containerShop {
+	.containerBook {
 		display: block;
+		padding-top: 10px;
 	}
 }
